# mweru-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  ENGINE_COMPLETE_SUMMARY.md  INSTALL_LUA.md  INSTALL_OPENAL.md  PHASE10_COMPLETE.md  PHASE10_PROGRESS.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_AUDIO_PENDING.md  PHASE8_COMPLETE.md  PHASE9_COMPLETE.md  PHASES_11_12_IMPLEMENTATION_PLAN.md  QUICKSTART.md  README.md  STUDENT_GUIDE.md  build_deb.sh  install.sh  package_game.sh  setup.sh
.github/workflows/: release.yml
BreakoutGame/: CMakeLists.txt  README.md
BreakoutGame/src/: BreakoutGame.cpp
Editor/: CMakeLists.txt
Editor/include/: AIHelper.h  EditorCamera.h  GridRenderer.h  UpdateChecker.h
Editor/src/: AIHelper.cpp  EditorApp.cpp  EditorCamera.cpp  GridRenderer.cpp  UpdateChecker.cpp
Engine/: CMakeLists.txt
Engine/include/Engine/Animation/: AnimationSystem.h
Engine/include/Engine/Assets/: Asset.h  AssetManager.h  UUID.h
Engine/include/Engine/Audio/: AudioEngine.h  AudioSystem.h
Engine/include/Engine/Core/: Application.h  Timestep.h  Window.h
Engine/include/Engine/ECS/: Components.h  Entity.h
Engine/include/Engine/Game/: GameTimerSystem.h
Engine/include/Engine/Input/: Input.h
Engine/include/Engine/Particles/: ParticleSystem.h
Engine/include/Engine/Physics/: PhysicsSystem.h  PhysicsWorld.h
Engine/include/Engine/Rendering/: Font.h  Framebuffer.h  Renderer2D.h  Shader.h  Texture.h
Engine/include/Engine/Scene/: Scene.h  SceneRenderer.h  SceneSerializer.h
Engine/include/Engine/Scripting/: LuaScriptEngine.h
Engine/src/Animation/: AnimationSystem.cpp
Engine/src/Assets/: AssetManager.cpp  UUID.cpp
Engine/src/Audio/: AudioEngine.cpp  AudioSystem.cpp
Engine/src/Core/: Application.cpp  Window.cpp
Engine/src/ECS/: Entity.cpp
Engine/src/Game/: GameTimerSystem.cpp
Engine/src/Input/: Input.cpp
Engine/src/Particles/: ParticleSystem.cpp
Engine/src/Physics/: PhysicsSystem.cpp  PhysicsWorld.cpp
Engine/src/Rendering/: Font.cpp  Framebuffer.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp
Engine/src/Scene/: Scene.cpp  SceneRenderer.cpp  SceneSerializer.cpp
Engine/src/Scripting/: LuaScriptEngine.cpp
Runtime/: CMakeLists.txt
Runtime/src/: RuntimeApp.cpp
Sandbox/: AssetSystemDemo.cpp  CMakeLists.txt  InputSystemDemo.cpp  PhysicsDemo.cpp  SerializationDemo.cpp
Sandbox/src/: main.cpp
WebRuntime/: CMakeLists.txt  shell.html
WebRuntime/include/glad/: glad.h
WebRuntime/src/: WebRuntimeApp.cpp
assets/scripts/examples/: bounce.lua  camera_follow.lua  dialogue_trigger.lua  health_bar.lua  jump.lua  movement.lua  quiz_manager.lua  rainbow.lua  rotate.lua
assets/scripts/templates/: empty.lua
